src/snapshots/zoisite__grammar__tests__block_expr.snap
---
source: src/grammar.rs
expression: "parse(\"{1} + {2};\")"
---
(
    Root@0..10
      ExprStmt@0..9
        BinaryExpr@0..9
          BlockExpr@0..4
            OpenBrace@0..1 "{"
            ExprStmt@1..2
              NumberLiteral@1..2
                Number@1..2 "1"
            CloseBrace@2..3 "}"
            Whitespace@3..4 " "
          Plus@4..5 "+"
          Whitespace@5..6 " "
          BlockExpr@6..9
            OpenBrace@6..7 "{"
            ExprStmt@7..8
              NumberLiteral@7..8
                Number@7..8 "2"
            CloseBrace@8..9 "}"
      Semicolon@9..10 ";"
    ,
    [],
)
