src/snapshots/zoisite__grammar__tests__fn_def.snap
---
source: src/grammar.rs
expression: "parse(\"fun f(n: int): int { 1; }\")"
---
(
    Root@0..25
      FuncDef@0..25
        FunKw@0..3 "fun"
        Whitespace@3..4 " "
        Ident@4..5 "f"
        ParamList@5..13
          OpenParen@5..6 "("
          TypedIdent@6..12
            Ident@6..7 "n"
            Colon@7..8 ":"
            Whitespace@8..9 " "
            Ident@9..12 "int"
          CloseParen@12..13 ")"
        Colon@13..14 ":"
        Whitespace@14..15 " "
        Ident@15..18 "int"
        Whitespace@18..19 " "
        BlockExpr@19..25
          OpenBrace@19..20 "{"
          Whitespace@20..21 " "
          ExprStmt@21..24
            Literal@21..22
              Number@21..22 "1"
            Semicolon@22..23 ";"
            Whitespace@23..24 " "
          CloseBrace@24..25 "}"
    ,
    [],
)
