src/snapshots/zoisite__grammar__tests__paren.snap
---
source: src/grammar.rs
expression: "parse(\"(1 + 2) * 3;\")"
---
(
    Root@0..12
      ExprStmt@0..11
        BinaryExpr@0..11
          ParenExpr@0..8
            OpenParen@0..1 "("
            BinaryExpr@1..6
              NumberLiteral@1..3
                Number@1..2 "1"
                Whitespace@2..3 " "
              Plus@3..4 "+"
              Whitespace@4..5 " "
              NumberLiteral@5..6
                Number@5..6 "2"
            CloseParen@6..7 ")"
            Whitespace@7..8 " "
          Star@8..9 "*"
          Whitespace@9..10 " "
          NumberLiteral@10..11
            Number@10..11 "3"
      Semicolon@11..12 ";"
    ,
    [],
)
