src/snapshots/zoisite__grammar__tests__ref_expr.snap
---
source: src/grammar.rs
expression: "parse(\"a + bc;\")"
---
(
    Root@0..7
      ExprStmt@0..7
        BinaryExpr@0..6
          RefExpr@0..2
            Ident@0..1 "a"
            Whitespace@1..2 " "
          Plus@2..3 "+"
          Whitespace@3..4 " "
          RefExpr@4..6
            Ident@4..6 "bc"
        Semicolon@6..7 ";"
    ,
    [],
)
