src/snapshots/zoisite__grammar__tests__unary.snap
---
source: src/grammar.rs
expression: "parse(\"-1 * -2;\")"
---
(
    Root@0..8
      ExprStmt@0..8
        BinaryExpr@0..7
          PrefixExpr@0..3
            Minus@0..1 "-"
            NumberLiteral@1..3
              Number@1..2 "1"
              Whitespace@2..3 " "
          Star@3..4 "*"
          Whitespace@4..5 " "
          PrefixExpr@5..7
            Minus@5..6 "-"
            NumberLiteral@6..7
              Number@6..7 "2"
        Semicolon@7..8 ";"
    ,
    [],
)
